[REFACTOR] Update Converter class
Converter class 내용 수정